Fixed rating overflow

--- a/DotsolutionsWebsiteTester/DotsolutionsWebsiteTester/Content/Site.css
+++ b/DotsolutionsWebsiteTester/DotsolutionsWebsiteTester/Content/Site.css
@@ -47,15 +47,11 @@
     }
 
     #MainContent_sizeref {
-        height: 280px;
+        height: 350px;
     }
 
-        #MainContent_sizeref h5 {
-            font-size: 1.5em;
-        }
-
         #MainContent_sizeref h4 {
-            font-size: 1.5em;
+            font-size: 1.3em;
             font-weight: bold;
         }
 
@@ -94,6 +90,10 @@
     #MainContent_tabletImg, #MainContent_mobileImg {
         margin-left: auto;
     }
+
+    .manualTest#prof, .manualTest#userX {
+        width: 100%;
+    }
 }
 
 @media (min-width: 768px) {
@@ -120,7 +120,7 @@
     }
 
     #MainContent_sizeref {
-        height: 250px;
+        height: 300px;
     }
 
     .laptopcontainer {
@@ -162,6 +162,9 @@
 
     #MainContent_mobileImg {
         margin-left: 0;
+    }
+    .manualTest#prof, .manualTest#userX {
+        width: 50%;
     }
 }
 
@@ -206,9 +209,7 @@ body {
 }
 
 body {
-    background-color: #54b721 !important;
-    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAR0lEQVQYV2MM2a74n4EA+PLkDwMjIYUgRTwyLPgVwhSBLMRpIrIinArRFWFViE0RhkJcilAU4lMEV0hIEVihx2zZ/6BwIgQAQjIwjcA3DQgAAAAASUVORK5CYII=) repeat;
-    background: url(http://v8.dotcontent.nl/media/img/bg.jpg) center center no-repeat fixed;
+    background-color: #f5f5f5 !important;
     height: 100%;
     font-size: 1em;
 }
@@ -231,9 +232,21 @@ footer {
     /*padding: 0;*/
 }
 
+h1 span {
+    color: #54b721;
+}
+
 .results {
     overflow-x: auto;
 }
+
+.panel-custom {
+    padding: 25px;
+}
+
+    .panel-custom .panel-heading span:not(.ratingCircle) {
+        font-size: 1.3em;
+    }
 
 .word-break {
     word-break: break-word;
@@ -326,24 +339,6 @@ footer {
     user-select: none;
 }
 
-.panel.panel-custom {
-    /*box-shadow: 0px 0px 50px 10px #000;*/
-}
-
-.panel-custom {
-    /*border-color: #32A389 !important;*/
-    border-color: #489b1d !important;
-}
-
-    .panel-custom .panel-heading {
-        color: white;
-        /*background-color: #20856E;*/
-        /*border-color: #32A389;*/
-        background-color: #54b721;
-        border-color: #489b1d;
-        background-repeat: repeat-x;
-    }
-
 @media all {
     .page-break {
         display: none;
@@ -372,15 +367,17 @@ footer {
 }
 
 .urlTextBoxRow .input-group {
-    /*background-color: #f9841b;*/
-    /*background-color: #34495e;*/
-    background-color: #3fb2ab;
-    padding: 20px;
     border-radius: 5px;
 }
 
+
 #testsjumbotron {
     margin-top: 6%;
+}
+
+#MainContent_UrlTextBox {
+    height: 50px;
+    font-size: 1.5em;
 }
 
 #MainContent_StartScanBtn,
@@ -595,6 +592,7 @@ footer {
     margin-top: 10px;
 }
 
+
 .manualTest {
     left: 2%;
     position: relative;
@@ -602,6 +600,15 @@ footer {
 
     .manualTest i {
         color: #f6cd29;
+    }
+
+    .manualTest#prof, .manualTest#userX {
+        float: left;
+    }
+
+    .manualTest#vormComm {
+        width: 100%;
+        float: left;
     }
 
 .ratingList {
@@ -832,14 +839,12 @@ footer {
 }
 
 .title {
-    text-transform: uppercase;
     font-weight: bold;
     font-size: 2.3em;
     margin-left: 10px;
 }
 
 .subTitle {
-    text-transform: uppercase;
     font-size: 1.5em;
     margin-left: 10px;
 }
